# gomoku-rl

./: .gitignore  LICENSE  README.md  colab_train.py  play.py  pyproject.toml
gomoku_rl/: __init__.py  buffer.py  colab.py  config.py  env.py  eval.py  gui.py  inference.py  main.py  mcts.py  network.py  policy_utils.py  symmetry.py  train.py
notebooks/: train_gomoku_colab.ipynb
scripts/: colab_setup.py
